feat: Implement WhatsApp multi-message template support
Add comprehensive multi-message template system for WhatsApp with advanced
splitting strategies, delivery tracking, and intuitive UI management.

Features:
- Multi-message mode toggle in template creation interface
- Four splitting strategies: paragraph, sentence, custom delimiter, manual
- Real-time message preview with customer data substitution
- Configurable timing and rate limiting (0.1-60s delays)
- Individual message delivery tracking in sequences
- Template conversion between single/multi-message formats
- Interactive message sequence editor with drag-and-drop reordering
- Comprehensive validation with detailed error messages

Core Components:
- WhatsAppMultiMessageTemplate: Enhanced template class with splitting logic
- WhatsAppMultiMessageManager: CRUD operations with persistence and search
- WhatsAppMultiMessageService: Sequence sending with progress tracking
- WhatsAppMultiMessageDialog: Full-featured creation/editing UI

Technical Implementation:
- Thread-safe operations with proper locking mechanisms
- JSON-based persistence with atomic operations
- Comprehensive error handling and validation
- Memory-efficient message sequence storage
- Export/import functionality for template portability

UI/UX Enhancements:
- Visual message sequence editor with add/edit/remove/reorder
- Real-time preview showing individual messages with timing
- Character count tracking per message (4096 char WhatsApp limit)
- Estimated send time calculation and display
- Contextual validation feedback with actionable error messages

Internationalization:
- Added 50+ translation keys in English, Spanish, Portuguese
- Full localization support for all UI elements and error messages
- Consistent terminology across all languages

Testing:
- 18 comprehensive unit tests covering all functionality
- Integration tests for end-to-end workflows
- Demo application showcasing real-world usage
- Performance validation and error handling ve

--- a/src/multichannel_messaging/localization/en.json
+++ b/src/multichannel_messaging/localization/en.json
@@ -49,6 +49,90 @@
   "whatsapp_business_settings": "WhatsApp Business API Settings...",
   "whatsapp_content": "WhatsApp Content",
   
+  "_comment_multi_message": "WhatsApp Multi-Message Template Support",
+  "whatsapp_multi_message_templates": "WhatsApp Multi-Message Templates",
+  "create_whatsapp_template": "Create WhatsApp Template",
+  "edit_whatsapp_template": "Edit WhatsApp Template",
+  "basic_information": "Basic Information",
+  "template_name": "Template Name",
+  "template_name_placeholder": "Enter template name...",
+  "template_name_required": "Template name is required",
+  "template_content_required": "Template content is required",
+  "multi_message_configuration": "Multi-Message Configuration",
+  "enable_multi_message_mode": "Enable Multi-Message Mode",
+  "split_strategy": "Split Strategy",
+  "split_by_paragraphs": "Split by Paragraphs",
+  "split_by_sentences": "Split by Sentences", 
+  "split_by_custom_delimiter": "Split by Custom Delimiter",
+  "manual_split": "Manual Split",
+  "custom_delimiter": "Custom Delimiter",
+  "custom_delimiter_placeholder": "Enter delimiter (e.g., \\n\\n)...",
+  "delay_between_messages": "Delay Between Messages",
+  "seconds": "seconds",
+  "max_messages_per_sequence": "Max Messages per Sequence",
+  "template_content": "Template Content",
+  "whatsapp_content_placeholder": "Enter WhatsApp message content...\n\nUse variables like {name}, {company}, {phone}, {email}",
+  "auto_split_messages": "Auto-Split Messages",
+  "message_sequence": "Message Sequence",
+  "messages": "messages",
+  "add_message": "Add Message",
+  "edit_message": "Edit Message",
+  "remove_message": "Remove Message",
+  "enter_message_content": "Enter message content:",
+  "edit_message_content": "Edit message content:",
+  "remove_message_confirm": "Are you sure you want to remove this message?",
+  "message_preview": "Message Preview",
+  "estimated_send_time": "Estimated Send Time",
+  "message": "Message",
+  "delay": "Delay",
+  "no_template_selected": "No template selected",
+  "preview_sample_data_info": "Preview uses sample data: John Smith, Acme Corporation",
+  "validate_template": "Validate Template",
+  "save_template": "Save Template",
+  "template_validation_failed": "Template Validation Failed",
+  "template_validation_errors": "The following errors were found:",
+  "template_validation_passed": "Template Validation Passed",
+  "template_validation_success": "Template is valid and ready to use!",
+  "template_has_errors_save_anyway": "Template has validation errors. Save anyway?",
+  
+  "_comment_template_errors": "Template Error Messages",
+  "template_error_empty_content": "Template content cannot be empty",
+  "template_error_empty_sequence": "Message sequence cannot be empty in multi-message mode",
+  "template_error_too_many_messages": "Too many messages in sequence ({count}). Maximum allowed: {max_count}",
+  "template_error_message_too_long": "Message {message_num} is too long ({length} characters). Maximum: 4096",
+  "template_error_empty_message": "Message {message_num} cannot be empty",
+  "template_error_delay_too_short": "Message delay must be at least 0.1 seconds",
+  "template_error_delay_too_long": "Message delay cannot exceed 60 seconds",
+  
+  "_comment_multi_message_ui": "Multi-Message UI Elements",
+  "multi_message_mode": "Multi-Message Mode",
+  "single_message_mode": "Single Message Mode",
+  "convert_to_multi_message": "Convert to Multi-Message",
+  "convert_to_single_message": "Convert to Single Message",
+  "message_count": "Message Count",
+  "sequence_preview": "Sequence Preview",
+  "send_as_sequence": "Send as Sequence",
+  "sequence_status": "Sequence Status",
+  "messages_sent": "Messages Sent",
+  "messages_pending": "Messages Pending",
+  "messages_failed": "Messages Failed",
+  "sequence_progress": "Sequence Progress",
+  "cancel_sequence": "Cancel Sequence",
+  "retry_failed_messages": "Retry Failed Messages",
+  "manage_whatsapp_templates": "Manage WhatsApp Templates",
+  "whatsapp_template_created": "WhatsApp template '{name}' created successfully",
+  "failed_to_create_whatsapp_template": "Failed to create WhatsApp template: {error}",
+  "failed_to_open_whatsapp_manager": "Failed to open WhatsApp template manager: {error}",
+  "no_templates": "No Templates",
+  "no_whatsapp_templates_found": "No WhatsApp templates found. Create one first.",
+  "edit_template": "Edit Template",
+  "delete_template": "Delete Template",
+  "whatsapp_template_updated": "WhatsApp template '{name}' updated successfully",
+  "failed_to_update_whatsapp_template": "Failed to update WhatsApp template: {error}",
+  "delete_whatsapp_template_confirm": "Are you sure you want to delete the WhatsApp template '{name}'?",
+  "whatsapp_template_deleted": "WhatsApp template '{name}' deleted successfully",
+  "failed_to_delete_whatsapp_template": "Failed to delete WhatsApp template: {error}",
+  
   "_comment_modern_ui": "Modern UI and Theme Translations",
   "preferences": "Preferences",
   "menu_view": "View",
