--- a/src/multichannel_messaging/localization/es.json
+++ b/src/multichannel_messaging/localization/es.json
@@ -48,6 +48,90 @@
   "whatsapp_business_ready": "WhatsApp Business: Listo",
   "whatsapp_business_settings": "Configuraciones WhatsApp Business API...",
   "whatsapp_content": "Contenido WhatsApp",
+  
+  "_comment_multi_message": "Soporte de Plantillas Multi-Mensaje WhatsApp",
+  "whatsapp_multi_message_templates": "Plantillas Multi-Mensaje WhatsApp",
+  "create_whatsapp_template": "Crear Plantilla WhatsApp",
+  "edit_whatsapp_template": "Editar Plantilla WhatsApp",
+  "basic_information": "Información Básica",
+  "template_name": "Nombre de Plantilla",
+  "template_name_placeholder": "Ingrese nombre de plantilla...",
+  "template_name_required": "El nombre de plantilla es requerido",
+  "template_content_required": "El contenido de plantilla es requerido",
+  "multi_message_configuration": "Configuración Multi-Mensaje",
+  "enable_multi_message_mode": "Habilitar Modo Multi-Mensaje",
+  "split_strategy": "Estrategia de División",
+  "split_by_paragraphs": "Dividir por Párrafos",
+  "split_by_sentences": "Dividir por Oraciones",
+  "split_by_custom_delimiter": "Dividir por Delimitador Personalizado",
+  "manual_split": "División Manual",
+  "custom_delimiter": "Delimitador Personalizado",
+  "custom_delimiter_placeholder": "Ingrese delimitador (ej., \\n\\n)...",
+  "delay_between_messages": "Retraso Entre Mensajes",
+  "seconds": "segundos",
+  "max_messages_per_sequence": "Máx. Mensajes por Secuencia",
+  "template_content": "Contenido de Plantilla",
+  "whatsapp_content_placeholder": "Ingrese contenido del mensaje WhatsApp...\n\nUse variables como {name}, {company}, {phone}, {email}",
+  "auto_split_messages": "Auto-Dividir Mensajes",
+  "message_sequence": "Secuencia de Mensajes",
+  "messages": "mensajes",
+  "add_message": "Agregar Mensaje",
+  "edit_message": "Editar Mensaje",
+  "remove_message": "Eliminar Mensaje",
+  "enter_message_content": "Ingrese contenido del mensaje:",
+  "edit_message_content": "Edite contenido del mensaje:",
+  "remove_message_confirm": "¿Está seguro de que desea eliminar este mensaje?",
+  "message_preview": "Vista Previa del Mensaje",
+  "estimated_send_time": "Tiempo Estimado de Envío",
+  "message": "Mensaje",
+  "delay": "Retraso",
+  "no_template_selected": "No hay plantilla seleccionada",
+  "preview_sample_data_info": "La vista previa usa datos de muestra: John Smith, Acme Corporation",
+  "validate_template": "Validar Plantilla",
+  "save_template": "Guardar Plantilla",
+  "template_validation_failed": "Validación de Plantilla Falló",
+  "template_validation_errors": "Se encontraron los siguientes errores:",
+  "template_validation_passed": "Validación de Plantilla Exitosa",
+  "template_validation_success": "¡La plantilla es válida y está lista para usar!",
+  "template_has_errors_save_anyway": "La plantilla tiene errores de validación. ¿Guardar de todos modos?",
+  
+  "_comment_template_errors": "Mensajes de Error de Plantilla",
+  "template_error_empty_content": "El contenido de la plantilla no puede estar vacío",
+  "template_error_empty_sequence": "La secuencia de mensajes no puede estar vacía en modo multi-mensaje",
+  "template_error_too_many_messages": "Demasiados mensajes en secuencia ({count}). Máximo permitido: {max_count}",
+  "template_error_message_too_long": "El mensaje {message_num} es demasiado largo ({length} caracteres). Máximo: 4096",
+  "template_error_empty_message": "El mensaje {message_num} no puede estar vacío",
+  "template_error_delay_too_short": "El retraso del mensaje debe ser al menos 0.1 segundos",
+  "template_error_delay_too_long": "El retraso del mensaje no puede exceder 60 segundos",
+  
+  "_comment_multi_message_ui": "Elementos de UI Multi-Mensaje",
+  "multi_message_mode": "Modo Multi-Mensaje",
+  "single_message_mode": "Modo Mensaje Único",
+  "convert_to_multi_message": "Convertir a Multi-Mensaje",
+  "convert_to_single_message": "Convertir a Mensaje Único",
+  "message_count": "Cantidad de Mensajes",
+  "sequence_preview": "Vista Previa de Secuencia",
+  "send_as_sequence": "Enviar como Secuencia",
+  "sequence_status": "Estado de Secuencia",
+  "messages_sent": "Mensajes Enviados",
+  "messages_pending": "Mensajes Pendientes",
+  "messages_failed": "Mensajes Fallidos",
+  "sequence_progress": "Progreso de Secuencia",
+  "cancel_sequence": "Cancelar Secuencia",
+  "retry_failed_messages": "Reintentar Mensajes Fallidos",
+  "manage_whatsapp_templates": "Gestionar Plantillas WhatsApp",
+  "whatsapp_template_created": "Plantilla WhatsApp '{name}' creada exitosamente",
+  "failed_to_create_whatsapp_template": "Error al crear plantilla WhatsApp: {error}",
+  "failed_to_open_whatsapp_manager": "Error al abrir gestor de plantillas WhatsApp: {error}",
+  "no_templates": "Sin Plantillas",
+  "no_whatsapp_templates_found": "No se encontraron plantillas WhatsApp. Cree una primero.",
+  "edit_template": "Editar Plantilla",
+  "delete_template": "Eliminar Plantilla",
+  "whatsapp_template_updated": "Plantilla WhatsApp '{name}' actualizada exitosamente",
+  "failed_to_update_whatsapp_template": "Error al actualizar plantilla WhatsApp: {error}",
+  "delete_whatsapp_template_confirm": "¿Está seguro de que desea eliminar la plantilla WhatsApp '{name}'?",
+  "whatsapp_template_deleted": "Plantilla WhatsApp '{name}' eliminada exitosamente",
+  "failed_to_delete_whatsapp_template": "Error al eliminar plantilla WhatsApp: {error}",
   "outlook_windows_pywin32_required": "pywin32 es requerido para la integración con Outlook en Windows. Por favor instálelo con: pip install pywin32",
   "outlook_cannot_start": "No se puede iniciar la aplicación Outlook",
   "outlook_connection_lost": "Se perdió la conexión con Outlook",
