--- a/src/multichannel_messaging/localization/pt.json
+++ b/src/multichannel_messaging/localization/pt.json
@@ -48,6 +48,90 @@
   "whatsapp_business_ready": "WhatsApp Business: Pronto",
   "whatsapp_business_settings": "Configurações WhatsApp Business API...",
   "whatsapp_content": "Conteúdo WhatsApp",
+  
+  "_comment_multi_message": "Suporte a Modelos Multi-Mensagem WhatsApp",
+  "whatsapp_multi_message_templates": "Modelos Multi-Mensagem WhatsApp",
+  "create_whatsapp_template": "Criar Modelo WhatsApp",
+  "edit_whatsapp_template": "Editar Modelo WhatsApp",
+  "basic_information": "Informações Básicas",
+  "template_name": "Nome do Modelo",
+  "template_name_placeholder": "Digite o nome do modelo...",
+  "template_name_required": "Nome do modelo é obrigatório",
+  "template_content_required": "Conteúdo do modelo é obrigatório",
+  "multi_message_configuration": "Configuração Multi-Mensagem",
+  "enable_multi_message_mode": "Habilitar Modo Multi-Mensagem",
+  "split_strategy": "Estratégia de Divisão",
+  "split_by_paragraphs": "Dividir por Parágrafos",
+  "split_by_sentences": "Dividir por Frases",
+  "split_by_custom_delimiter": "Dividir por Delimitador Personalizado",
+  "manual_split": "Divisão Manual",
+  "custom_delimiter": "Delimitador Personalizado",
+  "custom_delimiter_placeholder": "Digite delimitador (ex., \\n\\n)...",
+  "delay_between_messages": "Atraso Entre Mensagens",
+  "seconds": "segundos",
+  "max_messages_per_sequence": "Máx. Mensagens por Sequência",
+  "template_content": "Conteúdo do Modelo",
+  "whatsapp_content_placeholder": "Digite o conteúdo da mensagem WhatsApp...\n\nUse variáveis como {name}, {company}, {phone}, {email}",
+  "auto_split_messages": "Auto-Dividir Mensagens",
+  "message_sequence": "Sequência de Mensagens",
+  "messages": "mensagens",
+  "add_message": "Adicionar Mensagem",
+  "edit_message": "Editar Mensagem",
+  "remove_message": "Remover Mensagem",
+  "enter_message_content": "Digite o conteúdo da mensagem:",
+  "edit_message_content": "Edite o conteúdo da mensagem:",
+  "remove_message_confirm": "Tem certeza de que deseja remover esta mensagem?",
+  "message_preview": "Visualização da Mensagem",
+  "estimated_send_time": "Tempo Estimado de Envio",
+  "message": "Mensagem",
+  "delay": "Atraso",
+  "no_template_selected": "Nenhum modelo selecionado",
+  "preview_sample_data_info": "A visualização usa dados de exemplo: John Smith, Acme Corporation",
+  "validate_template": "Validar Modelo",
+  "save_template": "Salvar Modelo",
+  "template_validation_failed": "Validação do Modelo Falhou",
+  "template_validation_errors": "Os seguintes erros foram encontrados:",
+  "template_validation_passed": "Validação do Modelo Passou",
+  "template_validation_success": "O modelo é válido e está pronto para usar!",
+  "template_has_errors_save_anyway": "O modelo tem erros de validação. Salvar mesmo assim?",
+  
+  "_comment_template_errors": "Mensagens de Erro do Modelo",
+  "template_error_empty_content": "O conteúdo do modelo não pode estar vazio",
+  "template_error_empty_sequence": "A sequência de mensagens não pode estar vazia no modo multi-mensagem",
+  "template_error_too_many_messages": "Muitas mensagens na sequência ({count}). Máximo permitido: {max_count}",
+  "template_error_message_too_long": "A mensagem {message_num} é muito longa ({length} caracteres). Máximo: 4096",
+  "template_error_empty_message": "A mensagem {message_num} não pode estar vazia",
+  "template_error_delay_too_short": "O atraso da mensagem deve ser pelo menos 0.1 segundos",
+  "template_error_delay_too_long": "O atraso da mensagem não pode exceder 60 segundos",
+  
+  "_comment_multi_message_ui": "Elementos de UI Multi-Mensagem",
+  "multi_message_mode": "Modo Multi-Mensagem",
+  "single_message_mode": "Modo Mensagem Única",
+  "convert_to_multi_message": "Converter para Multi-Mensagem",
+  "convert_to_single_message": "Converter para Mensagem Única",
+  "message_count": "Contagem de Mensagens",
+  "sequence_preview": "Visualização da Sequência",
+  "send_as_sequence": "Enviar como Sequência",
+  "sequence_status": "Status da Sequência",
+  "messages_sent": "Mensagens Enviadas",
+  "messages_pending": "Mensagens Pendentes",
+  "messages_failed": "Mensagens Falharam",
+  "sequence_progress": "Progresso da Sequência",
+  "cancel_sequence": "Cancelar Sequência",
+  "retry_failed_messages": "Tentar Novamente Mensagens Falhadas",
+  "manage_whatsapp_templates": "Gerenciar Modelos WhatsApp",
+  "whatsapp_template_created": "Modelo WhatsApp '{name}' criado com sucesso",
+  "failed_to_create_whatsapp_template": "Falha ao criar modelo WhatsApp: {error}",
+  "failed_to_open_whatsapp_manager": "Falha ao abrir gerenciador de modelos WhatsApp: {error}",
+  "no_templates": "Nenhum Modelo",
+  "no_whatsapp_templates_found": "Nenhum modelo WhatsApp encontrado. Crie um primeiro.",
+  "edit_template": "Editar Modelo",
+  "delete_template": "Excluir Modelo",
+  "whatsapp_template_updated": "Modelo WhatsApp '{name}' atualizado com sucesso",
+  "failed_to_update_whatsapp_template": "Falha ao atualizar modelo WhatsApp: {error}",
+  "delete_whatsapp_template_confirm": "Tem certeza de que deseja excluir o modelo WhatsApp '{name}'?",
+  "whatsapp_template_deleted": "Modelo WhatsApp '{name}' excluído com sucesso",
+  "failed_to_delete_whatsapp_template": "Falha ao excluir modelo WhatsApp: {error}",
   "outlook_windows_pywin32_required": "pywin32 é necessário para integração com Outlook no Windows. Por favor instale com: pip install pywin32",
   "outlook_cannot_start": "Não é possível iniciar a aplicação Outlook",
   "outlook_connection_lost": "Conexão com Outlook foi perdida",
