--- a/src/multichannel_messaging/localization/es.json
+++ b/src/multichannel_messaging/localization/es.json
@@ -48,6 +48,19 @@
   "whatsapp_business_ready": "WhatsApp Business: Listo",
   "whatsapp_business_settings": "Configuraciones WhatsApp Business API...",
   "whatsapp_content": "Contenido WhatsApp",
+  "template_variables": "Variables de Plantilla",
+  "search_variables": "Buscar variables...",
+  "clear_search": "Limpiar búsqueda",
+  "click_to_insert_variable": "Haga clic o doble clic para insertar variable",
+  "insert_selected_variable": "Insertar Seleccionada",
+  "no_variables_available": "No hay variables disponibles",
+  "variables_count": "{count} variables disponibles",
+  "variables": "Variables",
+  "variable_from_column": "Datos de la columna '{column}'",
+  "default_variable_name_desc": "Nombre del cliente",
+  "default_variable_email_desc": "Dirección de correo del cliente",
+  "default_variable_phone_desc": "Número de teléfono del cliente",
+  "default_variable_company_desc": "Nombre de la empresa del cliente",
   
   "_comment_multi_message": "Soporte de Plantillas Multi-Mensaje WhatsApp",
   "whatsapp_multi_message_templates": "Plantillas Multi-Mensaje WhatsApp",
