--- a/src/multichannel_messaging/localization/pt.json
+++ b/src/multichannel_messaging/localization/pt.json
@@ -48,6 +48,19 @@
   "whatsapp_business_ready": "WhatsApp Business: Pronto",
   "whatsapp_business_settings": "Configurações WhatsApp Business API...",
   "whatsapp_content": "Conteúdo WhatsApp",
+  "template_variables": "Variáveis do Modelo",
+  "search_variables": "Buscar variáveis...",
+  "clear_search": "Limpar busca",
+  "click_to_insert_variable": "Clique ou duplo-clique para inserir variável",
+  "insert_selected_variable": "Inserir Selecionada",
+  "no_variables_available": "Nenhuma variável disponível",
+  "variables_count": "{count} variáveis disponíveis",
+  "variables": "Variáveis",
+  "variable_from_column": "Dados da coluna '{column}'",
+  "default_variable_name_desc": "Nome do cliente",
+  "default_variable_email_desc": "Endereço de email do cliente",
+  "default_variable_phone_desc": "Número de telefone do cliente",
+  "default_variable_company_desc": "Nome da empresa do cliente",
   
   "_comment_multi_message": "Suporte a Modelos Multi-Mensagem WhatsApp",
   "whatsapp_multi_message_templates": "Modelos Multi-Mensagem WhatsApp",
