feat: Simplify CSV import with flexible validation and rename templates to presets
BREAKING CHANGES:
- CSV import "templates" renamed to "presets" to avoid confusion with message templates
- Customer validation now flexible based on messaging channels

Features:
- Simplified CSV import requirements: only name + (email OR phone) required
- Made CSV presets optional - users can import without saving configurations
- Added flexible Customer validation based on selected messaging channels
- Users can now import email-only CSV (name + email) or WhatsApp-only CSV (name + phone)

Bug Fixes:
- Fixed KeyboardModifier enum conversion error in keyboard navigation (PySide6 compatibility)
- Fixed QLabel NULL pointer error in progress dialog with proper string validation
- Added backward compatibility for existing CSV template configurations

Technical Changes:
- Updated CSVImportConfiguration: template_name → preset_name with backward compatibility
- Enhanced Customer.validate() with flexible required_fields parameter
- Removed automatic validation in Customer.__post_init__ for caller control
- Updated CSV import validation to match selected messaging channels
- Fixed progress dialog string handling for null/invalid values

UI/UX Improvements:
- Clearer CSV import instructions emphasizing optional presets
- Better channel requirement messaging (name + email OR phone)
- Renamed UI elements from "templates" to "presets" for clarity
- Updated validation messages to reflect flexible requirements

Internationalization:
- Added new translation keys for preset functionality (en/pt/es)
- Updated CSV import guidance text in all supported languages
- Maintained backward compatibility with existing template translations

Files Modified:
- src/multichannel_messaging/core/keyboard_navigation.py
- src/multichannel_messaging/gui/modern_progress_dialog.py
- src/multichannel_messaging/gui/csv_import_config_dialog.py
- src/multichannel_messaging/core/models.py
- src/multichannel_messaging/gui/mai

--- a/src/multichannel_messaging/localization/en.json
+++ b/src/multichannel_messaging/localization/en.json
@@ -1098,6 +1098,30 @@
   "template_name_required": "Template name is required.",
   "template_exists_overwrite": "A template with this name already exists. Do you want to overwrite it?",
   "template_saved_successfully": "Template saved successfully.",
+  
+  "_comment_csv_presets": "=== CSV PRESETS (SIMPLIFIED) ===",
+  "csv_channel_requirements_info": "Select the messaging channels you plan to use. Only 'name' + either 'email' OR 'phone' is required.",
+  "csv_column_mapping_instructions": "Map CSV columns to fields. Name is always required, plus either email or phone for messaging.",
+  "csv_required_fields_info": "Required fields: {fields}",
+  "csv_no_channels_selected": "Select at least one messaging channel",
+  "csv_presets_info": "Presets are optional - they save your column mapping preferences for reuse with similar CSV files.",
+  "presets": "Presets",
+  "preset_information_optional": "Preset Information (Optional)",
+  "preset_name": "Preset Name:",
+  "preset_name_placeholder": "Optional: name for reusing this mapping",
+  "preset_description_placeholder": "Optional: describe what this preset is for",
+  "available_presets": "Available Presets",
+  "load_preset": "Load Preset",
+  "save_as_preset": "Save as Preset",
+  "delete_preset": "Delete Preset",
+  "select_preset_to_load": "Please select a preset to load.",
+  "preset_file_not_found": "Preset file not found.",
+  "preset_loaded_successfully": "Preset loaded successfully.",
+  "preset_name_required": "Preset name is required to save.",
+  "preset_exists_overwrite": "A preset with this name already exists. Do you want to overwrite it?",
+  "preset_saved_successfully": "Preset saved successfully.",
+  "confirm_delete_preset": "Are you sure you want to delete the preset '{name}'?",
+  "preset_deleted_successfully": "Preset deleted successfully.",
   "template_deleted_successfully": "Template deleted successfully.",
   "confirm_delete_template": "Are you sure you want to delete the template '{name}'?",
   "fix_configuration_errors": "Please fix the configuration errors before importing.",
