--- a/src/multichannel_messaging/localization/es.json
+++ b/src/multichannel_messaging/localization/es.json
@@ -1093,6 +1093,30 @@
   "template_name_required": "El nombre de la plantilla es requerido.",
   "template_exists_overwrite": "Ya existe una plantilla con este nombre. ¿Desea sobrescribirla?",
   "template_saved_successfully": "Plantilla guardada exitosamente.",
+  
+  "_comment_csv_presets": "=== PRESETS CSV (SIMPLIFICADO) ===",
+  "csv_channel_requirements_info": "Seleccione los canales de mensajería que planea usar. Solo se requiere 'nombre' + 'email' O 'teléfono'.",
+  "csv_column_mapping_instructions": "Mapee las columnas del CSV a los campos. El nombre siempre es requerido, más email o teléfono para mensajería.",
+  "csv_required_fields_info": "Campos requeridos: {fields}",
+  "csv_no_channels_selected": "Seleccione al menos un canal de mensajería",
+  "csv_presets_info": "Los presets son opcionales - guardan sus preferencias de mapeo de columnas para reutilizar con archivos CSV similares.",
+  "presets": "Presets",
+  "preset_information_optional": "Información del Preset (Opcional)",
+  "preset_name": "Nombre del Preset:",
+  "preset_name_placeholder": "Opcional: nombre para reutilizar este mapeo",
+  "preset_description_placeholder": "Opcional: describa para qué sirve este preset",
+  "available_presets": "Presets Disponibles",
+  "load_preset": "Cargar Preset",
+  "save_as_preset": "Guardar como Preset",
+  "delete_preset": "Eliminar Preset",
+  "select_preset_to_load": "Por favor, seleccione un preset para cargar.",
+  "preset_file_not_found": "Archivo de preset no encontrado.",
+  "preset_loaded_successfully": "Preset cargado exitosamente.",
+  "preset_name_required": "El nombre del preset es requerido para guardar.",
+  "preset_exists_overwrite": "Ya existe un preset con este nombre. ¿Desea sobrescribirlo?",
+  "preset_saved_successfully": "Preset guardado exitosamente.",
+  "confirm_delete_preset": "¿Está seguro de que desea eliminar el preset '{name}'?",
+  "preset_deleted_successfully": "Preset eliminado exitosamente.",
   "template_deleted_successfully": "Plantilla eliminada exitosamente.",
   "confirm_delete_template": "¿Está seguro de que desea eliminar la plantilla '{name}'?",
   "fix_configuration_errors": "Por favor corrija los errores de configuración antes de importar.",
