--- a/src/multichannel_messaging/localization/pt.json
+++ b/src/multichannel_messaging/localization/pt.json
@@ -1093,6 +1093,30 @@
   "template_name_required": "O nome do modelo é obrigatório.",
   "template_exists_overwrite": "Já existe um modelo com este nome. Deseja sobrescrever?",
   "template_saved_successfully": "Modelo salvo com sucesso.",
+  
+  "_comment_csv_presets": "=== PRESETS CSV (SIMPLIFICADO) ===",
+  "csv_channel_requirements_info": "Selecione os canais de mensagem que planeja usar. Apenas 'nome' + 'email' OU 'telefone' é obrigatório.",
+  "csv_column_mapping_instructions": "Mapeie as colunas do CSV para os campos. Nome é sempre obrigatório, mais email ou telefone para mensagens.",
+  "csv_required_fields_info": "Campos obrigatórios: {fields}",
+  "csv_no_channels_selected": "Selecione pelo menos um canal de mensagem",
+  "csv_presets_info": "Presets são opcionais - eles salvam suas preferências de mapeamento de colunas para reutilizar com arquivos CSV similares.",
+  "presets": "Presets",
+  "preset_information_optional": "Informações do Preset (Opcional)",
+  "preset_name": "Nome do Preset:",
+  "preset_name_placeholder": "Opcional: nome para reutilizar este mapeamento",
+  "preset_description_placeholder": "Opcional: descreva para que serve este preset",
+  "available_presets": "Presets Disponíveis",
+  "load_preset": "Carregar Preset",
+  "save_as_preset": "Salvar como Preset",
+  "delete_preset": "Excluir Preset",
+  "select_preset_to_load": "Por favor, selecione um preset para carregar.",
+  "preset_file_not_found": "Arquivo de preset não encontrado.",
+  "preset_loaded_successfully": "Preset carregado com sucesso.",
+  "preset_name_required": "Nome do preset é obrigatório para salvar.",
+  "preset_exists_overwrite": "Já existe um preset com este nome. Deseja sobrescrever?",
+  "preset_saved_successfully": "Preset salvo com sucesso.",
+  "confirm_delete_preset": "Tem certeza de que deseja excluir o preset '{name}'?",
+  "preset_deleted_successfully": "Preset excluído com sucesso.",
   "template_deleted_successfully": "Modelo excluído com sucesso.",
   "confirm_delete_template": "Tem certeza de que deseja excluir o modelo '{name}'?",
   "fix_configuration_errors": "Por favor corrija os erros de configuração antes de importar.",
